--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-compass": "~0.6.0"
+    "grunt-contrib-compass": "~0.6.0",
+    "grunt-contrib-jade": "~0.8.0"
   }
 }
