--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-compass": "~0.6.0",
     "grunt-contrib-jade": "~0.8.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-requirejs": "~0.4.1"
   }
 }
