--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-jade": "~0.8.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-requirejs": "~0.4.1"
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
